--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /SSAANIP/bin/Debug/net6.0-windows/config.txt
 /SSAANIP/obj/**
 /SSAANIP/.vs/**
+/SSAANIP/bin/Debug/net6.0-windows/TO DO.txt
+/100.73.164.110
